<resources>
    <string name="app_name">mp Right Inn</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_room_type">RoomType</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="receipt">Receipt</string>
    <string name="contact_us">Contact US</string>
    <!--<string name="todo">TODO</string>-->
    <string name="feedback">Feedback</string>
    <string name="book_room">Book Room</string>
    <!--<string name="todo">TODO</string>-->
    <!--<string name="todo">TODO</string>-->
    <!--<string name="todo">TODO</string>-->
    <!--<string name="todo">TODO</string>-->
    <string name="notification">Notification</string>
    <string name="logout">Logout</string>
    <string name="todo">TODO</string>
    <string name="room_type">Room Type</string>
    <string-array name="roomtype_array">
        <item>Single Room</item>
        <item>Double Room</item>
        <item>Triple Room</item>
        <item>Queen Room</item>
        <item>King Room</item>
        <item>Connecting Room</item>
        <item>Studio Room</item>
        <item>Master Suite Room</item>
    </string-array>
</resources>